--- a/src/main/resources/templates/project/recruit_create.html
+++ b/src/main/resources/templates/project/recruit_create.html
@@ -280,7 +280,8 @@
 
                   window.location.assign(`/project/${projectId}`);
               }).fail(error => { // HttpStatus 200번대가 아닐때
-                  alert("프로젝트 작성에 실패하였습니다!")
+                  let errors = Object.values(JSON.parse(JSON.stringify(error.responseJSON.data))).join('\n');
+                  alert(errors);
               });
           }
       });
