--- a/src/main/resources/templates/project/show_list.html
+++ b/src/main/resources/templates/project/show_list.html
@@ -100,7 +100,7 @@
     </div>
     <div class="select-wrap">
       <div class="left-select">
-        <select name="">
+        <select onchange="handleStackFilter(event)">
           <option value="all">기술스택 선택</option>
           <option value="Java">Java</option>
           <option value="C++">C++</option>
@@ -138,10 +138,10 @@
           <input type="text" placeholder="제목, 내용으로 검색" class="show-ipt"/>
           <button><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
-        <select class="select">
+        <select class="select" onchange="handleSelectFilter(event)">
           <option value="new">최신순</option>
           <option value="old">오래된순</option>
-          <option value="hot">인기순</option>
+<!--          <option value="hot">인기순</option>-->
           <option value="save">북마크순</option>
         </select>
       </div>
@@ -149,7 +149,7 @@
     </div>
 
   </div>
-  <div class="show-lists">
+  <div id="showList" class="show-lists">
     <a th:href="@{/project/show/{projectId}(projectId=${project.getId()})}" th:each="project:${allShows}" class="show-box">
       <div class="img-wrap">
         <img th:src="@{/img/showlist_sample.png}" alt="프로필 이미지"/>
@@ -205,8 +205,180 @@
     </a>
   </div>
 </div>
-</body>
 <footer>
   <th:block th:replace="~{fragment/footer}"></th:block>
 </footer>
+<script>
+
+  // 셀렉트 필터(기술스택)
+  function handleStackFilter(event) {
+    let filter = event.target.value;
+
+    console.log(typeof  filter);
+
+
+    if (filter == 'all')
+      window.location.reload();
+    else {
+      $.ajax({
+        url: '/api/project/skill/'+filter,
+        type: "get",
+        dataType: "json"
+      }).done(res => {
+        console.log("성공", res);
+        $('#showList').empty();
+        if (res.data.length === 0) {
+          $('#showList').append('<p class="search-null">해당 조건에 맞는 프로젝트가 존재하지 않습니다. 다시 검색해주세요.</p>');
+        } else {
+          // 새로운 프로젝트 리스트를 추가합니다.
+          res.data.forEach(project => {
+            let skillImages = project.skills.map(skill => {
+              let imgSrc;
+              switch(skill) {
+                case 'AWS':
+                  imgSrc = '/img/aws.svg';
+                  break;
+                case 'Docker':
+                  imgSrc = '/img/docker.svg';
+                  break;
+                case 'Figma':
+                  imgSrc = '/img/figma.svg';
+                  break;
+                case 'Flutter':
+                  imgSrc = '/img/flutter.svg';
+                  break;
+                case 'Git':
+                  imgSrc = '/img/git.svg';
+                  break;
+                case 'Java':
+                  imgSrc = '/img/java.svg';
+                  break;
+                case 'JavaScript':
+                  imgSrc = '/img/javascript.svg';
+                  break;
+                case 'Jest':
+                  imgSrc = '/img/jest.svg';
+                  break;
+                case 'Kotlin':
+                  imgSrc = '/img/kotlin.svg';
+                  break;
+                case 'MongoDb':
+                  imgSrc = '/img/mongodb.svg';
+                  break;
+                case 'MySQL':
+                  imgSrc = '/img/mysql.svg';
+                  break;
+                case 'Nodejs':
+                  imgSrc = '/img/nodejs.svg';
+                  break;
+                case 'php':
+                  imgSrc = '/img/php.svg';
+                  break;
+                case 'Python':
+                  imgSrc = '/img/python.svg';
+                  break;
+                case 'React':
+                  imgSrc = '/img/react.svg';
+                  break;
+                case 'ReactNative':
+                  imgSrc = '/img/reactnative.svg';
+                  break;
+                case 'Spring':
+                  imgSrc = '/img/spring.svg';
+                  break;
+                case 'Svelte':
+                  imgSrc = '/img/svelte.svg';
+                  break;
+                case 'TypeScript':
+                  imgSrc = '/img/typescript.svg';
+                  break;
+                case 'Vue':
+                  imgSrc = '/img/vue.svg';
+                  break;
+                default:
+                  imgSrc = ''; // 이미지가 없는 경우
+              }
+              return imgSrc ? `<img src="${imgSrc}" alt="${skill}"/>` : `<span>${skill}</span>`;
+            }).join('');
+
+            $('#showList').append(`
+                        <a href="/project/show/${project.id}" class="show-box">
+                            <div class="img-wrap">
+                                <img src="/img/showlist_sample.png" alt="프로필 이미지"/>
+                            </div>
+                            <div class="box-text">
+                                <span class="pj-type ${project.projectType == '사이드 프로젝트' ? 'pj' : 'study'}">${project.projectType}</span>
+                                <h2>${project.projectName}</h2>
+                                <ul class="skill">
+                                    <li>${skillImages}</li>
+                                </ul>
+                                <div class="lists-bot">
+                                    <p>${project.teamName}</p>
+                                    <ul class="count">
+                                        <li><i class="fa-solid fa-eye"></i>${project.views}회</li>
+                                        <li><i class="fa-regular fa-thumbs-up"></i>${project.likes}개</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </a>
+                    `);
+          });
+        }
+      }).fail(error => {
+        console.log("실패", error);
+      });
+    }
+  }
+
+  // 셀렉트 필터(북마크순)
+  function handleSelectFilter(event) {
+
+    let selecteCondition = event.target.value;
+
+    if (selecteCondition == 'all')
+      window.location.reload();
+    else {
+      $.ajax({
+        url: '/api/project/skill/'+ selecteCondition,
+        type: "get",
+        dataType: "json"
+      }).done(res => {
+        console.log("성공", res);
+
+        $('#showList').empty();
+        if (res.data.length === 0) {
+          $('#showList').append('<p class="search-null">프로젝트가 존재하지 않습니다. 다시 검색해주세요.</p>');
+        } else {
+          // 새로운 프로젝트 리스트를 추가합니다.
+          res.data.forEach(project => {
+            $('#showList').append(`
+               <a href="/project/show/${project.id}" class="show-box">
+                  <div class="img-wrap">
+                      <img src="/img/showlist_sample.png" alt="프로필 이미지"/>
+                  </div>
+                  <div class="box-text">
+                      <span class="pj-type ${project.projectType == '사이드 프로젝트' ? 'pj' : 'study'}">${project.projectType}</span>
+                      <h2>${project.projectName}</h2>
+                      <ul class="skill">
+                          <li>${skillImages}</li>
+                      </ul>
+                      <div class="lists-bot">
+                          <p>${project.teamName}</p>
+                          <ul class="count">
+                              <li><i class="fa-solid fa-eye"></i>${project.views}회</li>
+                              <li><i class="fa-regular fa-thumbs-up"></i>${project.likes}개</li>
+                          </ul>
+                      </div>
+                  </div>
+              </a>
+            `);
+          });
+        }
+      }).fail(error => {
+        console.log("실패", error);
+      });
+    }
+  }
+</script>
+</body>
 </html>
