헤더 레이아웃 변경
팀노트 -> 채용공고 변경
이후 사람인 API 승인 완료 시 채용공고 페이지 연결

--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -9,8 +9,8 @@
       <ul class="menu">
         <li><a th:href="@{/project}">멤버 모집</a></li>
         <li><a th:href="@{/project/show}">프로젝트 자랑</a></li>
-
-        <li><a href="#" sec:authorize="isAuthenticated()">팀 노트</a></li>
+        <!--  채용공고 페이지 이동  -->
+        <li><a href="#">채용공고(준비중)</a></li>
       </ul>
     </nav>
     <ul class="member">
