풀 받아오기 위한 커밋

--- a/src/main/resources/templates/project/show_list.html
+++ b/src/main/resources/templates/project/show_list.html
@@ -90,11 +90,11 @@
   </div>
   <div class="show-top">
     <div class="show-flex">
-      <ul class="type-slt">
-        <li><a href="">전체</a></li>
-        <li class="on"><a href="">사이드 프로젝트</a></li>
-        <li><a href="">스터디/모임</a></li>
-      </ul>
+<!--      <ul class="type-slt">-->
+<!--        <li><a href="">전체</a></li>-->
+<!--        <li class="on"><a href="">사이드 프로젝트</a></li>-->
+<!--        <li><a href="">스터디/모임</a></li>-->
+<!--      </ul>-->
       <button>✏️ 프로젝트 자랑 하기</button>
     </div>
     <div class="select-wrap">
@@ -118,20 +118,20 @@
           <option value="Node.js">Node.js</option>
           <option value="TypeScript">TypeScript</option>
         </select>
-        <select name="">
-          <option value="all">포지션</option>
-          <option value="">폴스택</option>
-          <option value="">프론트엔드</option>
-          <option value="">백엔드</option>
-          <option value="">디자인</option>
-          <option value="">기획</option>
-        </select>
-        <select name="">
-          <option value="">진행방식</option>
-          <option value="">온라인</option>
-          <option value="">오프라인</option>
-          <option value="">온/오프라인</option>
-        </select>
+<!--        <select name="">-->
+<!--          <option value="all">포지션</option>-->
+<!--          <option value="">폴스택</option>-->
+<!--          <option value="">프론트엔드</option>-->
+<!--          <option value="">백엔드</option>-->
+<!--          <option value="">디자인</option>-->
+<!--          <option value="">기획</option>-->
+<!--        </select>-->
+<!--        <select name="">-->
+<!--          <option value="">진행방식</option>-->
+<!--          <option value="">온라인</option>-->
+<!--          <option value="">오프라인</option>-->
+<!--          <option value="">온/오프라인</option>-->
+<!--        </select>-->
       </div>
       <div class="right-select">
         <div class="search">
