yoonju.js -> recruit_list로 파일명 변경

--- a/src/main/resources/templates/project/show_edit.html
+++ b/src/main/resources/templates/project/show_edit.html
@@ -24,7 +24,7 @@
   <script defer th:src="@{/js/dynamicSkills.js}"></script>
   <script defer th:src="@{/js/show_edit.js}"></script>
   <script th:src="@{/js/common.js}"></script>
-  <script th:src="@{/js/03yoonji.js}"></script>
+  <script th:src="@{/js/recruit_list.js}"></script>
   <!-- favicon -->
   <link rel="icon" th:href="@{/img/favicon.ico}">
 </head>
