--- a/src/main/resources/templates/project/show_list.html
+++ b/src/main/resources/templates/project/show_list.html
@@ -332,53 +332,132 @@
 
   // 셀렉트 필터(최신, 오래된, 북마크순)
   function handleSelectFilter(event) {
+    let selectedCondition = event.target.value;
 
-    let selecteCondition = event.target.value;
-
-    if (selecteCondition == 'all')
-      window.location.reload();
-    else {
-      $.ajax({
-        url: '/api/project/skill/'+ selecteCondition,
-        type: "get",
-        dataType: "json"
-      }).done(res => {
-        console.log("성공", res);
-
-        $('#showList').empty();
-        if (res.data.length === 0) {
-          $('#showList').append('<p class="search-null">프로젝트가 존재하지 않습니다. 다른 조건으로 검색해주세요.</p>');
-        } else {
-          // 새로운 프로젝트 리스트를 추가합니다.
-          res.data.forEach(project => {
-            $('#showList').append(`
-               <a href="/project/show/${project.id}" class="show-box">
-                  <div class="img-wrap">
-                      <img src="/img/showlist_sample.png" alt="프로필 이미지"/>
-                  </div>
-                  <div class="box-text">
-                      <span class="pj-type ${project.projectType == '사이드 프로젝트' ? 'pj' : 'study'}">${project.projectType}</span>
-                      <h2>${project.projectName}</h2>
-                      <ul class="skill">
-                          <li>${skillImages}</li>
-                      </ul>
-                      <div class="lists-bot">
-                          <p>${project.teamName}</p>
-                          <ul class="count">
-                              <li><i class="fa-solid fa-eye"></i>${project.views}회</li>
-                              <li><i class="fa-regular fa-thumbs-up"></i>${project.likes}개</li>
-                          </ul>
-                      </div>
-                  </div>
-              </a>
-            `);
-          });
-        }
-      }).fail(error => {
-        console.log("실패", error);
-      });
+    let apiUrl = '/api/show/select/';
+    if (selectedCondition === 'new') {
+      apiUrl += 'new';
+    } else if (selectedCondition === 'old') {
+      apiUrl += 'old';
+    } else if (selectedCondition === 'save') {
+      apiUrl += 'save';
+    } else {
+      return;
     }
+    console.log(selectedCondition);
+    console.log(apiUrl);
+
+
+    $.ajax({
+      url: apiUrl,
+      type: "get",
+      dataType: "json"
+    }).done(res => {
+      console.log("성공", res);
+
+      $('#showList').empty();
+      if (res.data.length === 0) {
+        $('#showList').append('<p class="search-null">프로젝트가 존재하지 않습니다. 다른 조건으로 검색해주세요.</p>');
+      } else {
+        // 새로운 프로젝트 리스트를 추가합니다.
+        res.data.forEach(project => {
+          let skillImages = project.skills.map(skill => {
+            let imgSrc;
+            switch(skill) {
+              case 'AWS':
+                imgSrc = '/img/aws.svg';
+                break;
+              case 'Docker':
+                imgSrc = '/img/docker.svg';
+                break;
+              case 'Figma':
+                imgSrc = '/img/figma.svg';
+                break;
+              case 'Flutter':
+                imgSrc = '/img/flutter.svg';
+                break;
+              case 'Git':
+                imgSrc = '/img/git.svg';
+                break;
+              case 'Java':
+                imgSrc = '/img/java.svg';
+                break;
+              case 'JavaScript':
+                imgSrc = '/img/javascript.svg';
+                break;
+              case 'Jest':
+                imgSrc = '/img/jest.svg';
+                break;
+              case 'Kotlin':
+                imgSrc = '/img/kotlin.svg';
+                break;
+              case 'MongoDb':
+                imgSrc = '/img/mongodb.svg';
+                break;
+              case 'MySQL':
+                imgSrc = '/img/mysql.svg';
+                break;
+              case 'Nodejs':
+                imgSrc = '/img/nodejs.svg';
+                break;
+              case 'php':
+                imgSrc = '/img/php.svg';
+                break;
+              case 'Python':
+                imgSrc = '/img/python.svg';
+                break;
+              case 'React':
+                imgSrc = '/img/react.svg';
+                break;
+              case 'ReactNative':
+                imgSrc = '/img/reactnative.svg';
+                break;
+              case 'Spring':
+                imgSrc = '/img/spring.svg';
+                break;
+              case 'Svelte':
+                imgSrc = '/img/svelte.svg';
+                break;
+              case 'TypeScript':
+                imgSrc = '/img/typescript.svg';
+                break;
+              case 'Vue':
+                imgSrc = '/img/vue.svg';
+                break;
+              default:
+                imgSrc = ''; // 이미지가 없는 경우
+            }
+            return imgSrc ? `<img src="${imgSrc}" alt="${skill}"/>` : `<span>${skill}</span>`;
+          }).join('');
+
+          $('#showList').append(`
+          <a href="/project/show/${project.id}" class="show-box">
+            <div class="img-wrap">
+              <img src="/img/showlist_sample.png" alt="프로필 이미지"/>
+            </div>
+            <div class="box-text">
+              <span class="pj-type ${project.projectType == '사이드 프로젝트' ? 'pj' : 'study'}">${project.projectType}</span>
+              <h2>${project.projectName}</h2>
+              <ul class="skill">
+                <li>${skillImages}</li>
+              </ul>
+              <div class="lists-bot">
+                <p>${project.teamName}</p>
+                <ul class="count">
+                  <li><i class="fa-solid fa-eye"></i>${project.views}회</li>
+                  <li><i class="fa-regular fa-thumbs-up"></i>${project.likes}개</li>
+                </ul>
+              </div>
+            </div>
+          </a>
+        `);
+        });
+      }
+    }).fail(error => {
+      console.log("실패", error);
+    });
   }
+
 </script>
 </body>
 </html>
