오타 수정: 풀스텍 -> 풀스택

--- a/src/main/resources/templates/member/mypage.html
+++ b/src/main/resources/templates/member/mypage.html
@@ -54,7 +54,7 @@
           <div class="skill-flex">
             <i class="fa-solid fa-book-bookmark"></i>
             <div class="tags skills">
-              <span class="work" th:if="${member.position == '풀스텍'}">풀스택</span>
+              <span class="work" th:if="${member.position == '풀스택'}">풀스택</span>
               <span class="work" th:if="${member.position == '프론트엔드'}">프론트엔드</span>
               <span class="work" th:if="${member.position == '백엔드'}">백엔드</span>
               <span class="work" th:if="${member.position == '디자이너'}">디자이너</span>
